c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_incomplete_structs/deref_incomplete_struct_pointer.c
struct s;

struct s *ptr = 0;

int main(void) {
  // can't dereference pointer to incomplete type
  // except in expression &*ptr
  *ptr;
  return 0;
}